--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,17 @@ dependencies:
   lottie: ^3.3.2
   shared_preferences: ^2.5.3
   dio: ^5.9.0
+  flutter_secure_storage: ^9.2.4
+  logging: ^1.3.0
+  cryptography: ^2.7.0
+
+dependency_overrides:
+  flutter_secure_storage_linux:
+    git:
+      url: https://github.com/m-berto/flutter_secure_storage.git
+      ref: patch-2
+      path: flutter_secure_storage_linux
+  flutter_secure_storage_platform_interface: 2.0.0
 
 dev_dependencies:
   flutter_test:
