--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   logging: ^1.3.0
   cryptography: ^2.7.0
+  intl: ^0.20.2
 
 dependency_overrides:
   flutter_secure_storage_linux:
