--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   logging: ^1.3.0
   cryptography: ^2.7.0
   intl: ^0.20.2
+  uuid: ^4.5.1
 
 dependency_overrides:
   flutter_secure_storage_linux:
