--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cryptography: ^2.7.0
   intl: ^0.20.2
   uuid: ^4.5.1
+  web_socket_channel: ^3.0.3
 
 dependency_overrides:
   flutter_secure_storage_linux:
